<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="playerName" type="String"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layout_marginTop="?attr/actionBarSize">

        <TextView
            android:id="@+id/sentenceToDraw"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginStart="9dp"
            android:layout_marginEnd="9dp"
            android:hint="@string/draw_this_sentence"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/created_by"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{playerName}"
            android:textSize="15sp"
            android:layout_margin="10sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sentenceToDraw" />

        <dev.develsinthedetails.eatpoopyoucat.DrawView
            android:id="@+id/draw_view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/white"
            app:layout_constraintDimensionRatio="W,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:elevation="1dp"
            app:layout_constraintTop_toBottomOf="@+id/created_by" />

        <LinearLayout
            android:id="@+id/edit_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@color/colorAccent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/draw_view">

            <Button
                android:id="@+id/btn_clearAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/clear"
                android:drawableTop="@drawable/ic_baseline_delete_forever_24"
                android:text="@string/clear"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/send_description"
                android:drawableTop="@drawable/ic_baseline_send_24"
                android:text="@string/send"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_erase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/erase_description"
                android:drawableTop="@drawable/ic_eraser_24"
                android:text="@string/erase"
                android:visibility="gone"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_draw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/draw_description"
                android:drawableTop="@drawable/ic_baseline_create_24"
                android:text="@string/draw"
                android:visibility="gone"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_undo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/undo_description"
                android:drawableTop="@drawable/ic_baseline_undo_24"
                android:text="@string/undo"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/btn_redo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/redo_description"
                android:drawableTop="@drawable/ic_baseline_redo_24"
                android:text="@string/redo"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>